ghes-vm-services.yml
# GitHub Enterprise Server services
#
# Enables external access to the management console and other HTTP/HTTPs services on ports 80, 443, and 8443.

apiVersion: v1
kind: Service
metadata:
  name: ghes-vm-http-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30880
    name: port-1
    port: 80
    protocol: TCP
    targetPort: 80
  - nodePort: 30881
    name: port-2
    port: 443
    protocol: TCP
    targetPort: 443
  - nodePort: 30882
    name: port-3
    port: 8443
    protocol: TCP
    targetPort: 8443    
  selector:
    kubevirt.io/vm: ghes-vm
  sessionAffinity: None
  type: LoadBalancer
