ghes-vm-http-aks.yml
apiVersion: v1
kind: Service
metadata:
  name: ghes-vm-http
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    kubevirt.io/vm: ghes-vm
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghes-vm-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: ghes-vm-http
          servicePort: 8080
        path: /(.*)
