ghes-vm-network.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: management-console-https
#   labels:
#     kubevirt.io/vm: ghes-vm
# spec:
#   type: NodePort
#   ports:
#     - port: 27015
#       targetPort: 8443
#       nodePort: 31111
#       protocol: TCP
#   selector:
#     kubevirt.io/vm: ghes-vm
# ---
apiVersion: v1
kind: Service
metadata:
  name: ghes-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    kubevirt.io/vm: ghes-vm
  type: ClusterIP
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: ghes-https-service
# spec:
#   ports:
#   - port: 7273
#     protocol: TCP
#     targetPort: 443
#   selector:
#     kubevirt.io/vm: ghes-vm
#   type: ClusterIP  
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: management-console-http
#   labels:
#     kubevirt.io/vm: ghes-vm
# spec:
#   type: NodePort
#   ports:
#     - port: 27016
#       targetPort: 8080
#       nodePort: 31112
#       protocol: TCP
#   selector:
#     kubevirt.io/vm: ghes-vm
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghes-service-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: web.3223920f69cd44c58f81.eastus2.aksapp.io
    http:
      paths:
      - backend:
          serviceName: ghes-service
          servicePort: 80
        path: /*
